import "goby/common/protobuf/option_extensions.proto";
import "goby/common/protobuf/app_base_config.proto";


package goby.common.protobuf;

message DatabaseConfig
{
  optional AppBaseConfig base = 1 [(goby.field).description="params shared with all goby applications"];

  enum SQLBackend
  {
    SQLITE = 1;
  }
  optional SQLBackend backend = 2 [default=SQLITE];
    
  message SQLiteInfo
  {       
    // %1% gets expanded into platform name
    // %2% gets expanded to iso date-time stamp
    optional string path = 2 [default="./%1%_%2%_goby.db"];
  }
  // only needed if backend == SQLITE
  optional SQLiteInfo sqlite = 3;

  repeated string plugin_library = 4 [(goby.field).example="/path/to/dbo_plugin.so", (goby.field).description="name of dynamic library containing an implementation of goby::core::DBOPlugin"];
}
